2012-01-10 20:05-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Changes to move NSXML classes to using libxml 
	more directly.

2012-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Remove cached paths when the owning bundle is
	deallocated.  Use cache to determine which resource directories to
	search.

2012-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Crude/simple caching of directory contents to
	test impact on theme loading ... needs reverting or improving.

2012-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcretePointerFunctions.m:
	* Source/NSSocketPort.m:
	* Source/unix/NSStream.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSZone.m:
	* Source/NSMessagePort.m:
	* Source/win32/GSFileHandle.m:
	* Source/NSInvocation.m:
	* Source/NSURLProtocol.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/GSXML.m:
	* Source/NSData.m:
	* Source/GSAvahiNetService.m:
	* Source/NSTextCheckingResult.m:
	Use PRIdPTR and PRIuPTR rather than ld and lu for printf formatting
	of NSInteger and NSUInteger values.

2012-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/ObjectiveC2/objc/capabilities.h:
	* Headers/ObjectiveC2/objc/Availability.h:
	* Headers/ObjectiveC2/objc/blocks_runtime.h:
	* Headers/ObjectiveC2/objc/runtime.h:
	Moved to subdirectory.
	* Source/Makefile.postamble:
	* Source/ObjectiveC2/runtime.c:
	* Source/ObjectiveC2/caps.c:
	* Source/ObjectiveC2/NSBlocks.m:
	* Source/ObjectiveC2/blocks_runtime.m:
	* Headers/GNUstepBase/GSObjCRuntime.h:
	* Tests/GNUmakefile:
	* base.make.in:
	Move ObjectiveC2 headers to objc subdirectory so that we can refer
	to them using the same objc/headername path as OSX, and use a -I
	directive to point to the ObjectiveC2 directory to avoid installing
	on top of the real objc2 library or vie versa. Should make it easier
	to figure out how to cleanly swith between raeal/emulated objc2
	runtimes.  This should also mean that old emulated objc2 headers are