@@ -1,3 +1,8 @@
+2012-01-10 20:21-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/NSXMLDocument.m: Added forward declarations for private
+	methods on NSXMLNode.
+
 2012-01-10 20:05-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSXMLNode.m: Changes to move NSXML classes to using libxml 
